2020-05-26  Benjamin Yang  <be11ng@protonmail.com>

	* mkpatch: Generate a diff for sys/unix/hints/linux-lisp.
	* enh-366.patch (hints/linux-lisp): New file.
	* Makefile (test-patch): Call sh setup.sh with hints/linux-lisp.
	* enh-366.patch (WINSRC): Remove redundant definition
	(WINOBJ): Likewise.
	(WINLIB): Likewise.
	(WINLISPLIB): Add -lncurses and -ltinfo.

	* Makefile (EMACS): Use /usr/bin/emacs instead of just emacs.

2020-05-25  Benjamin Yang  <be11ng@protonmail.com>

	* enh-366.patch: New patch for 3.6.6, addressing compiler errors.
	(winlisp.h): Add parameter bkglyph for lisp_print_glyph.
	(winlisp.c): Likewise, and cast mapglyph to (void).
	(winlisp.c): Pass FALSE argument to randrole().
	(winlisp.c): Replace u.ugold with money_cnt(invent).
	(winlisp.c): Replace terminate with nh_terminate.
	(winlisp.c): Comment out iflags.DECgraphics and iflags.IBMgraphics.
	(winlisp.c): Create new window_procs by using the one from curses as a
	termplate, using genl for missing functions.

2020-05-23  Benjamin Yang  <be11ng@protonmail.com>

	* Makefile (NH_VER): Bump version to 3.6.6.
	(NH_VER_NODOTS): Likewise.
	(NH_TAR, NH_SRC): New variables.
	(patch): Use NH_TAR and NH_SRC.
	(test-patch): Likewise.

2007-02-20  Shawn Betts  <sabetts@shitbender.gagrod>

	* nethack-compat.el (nh-overwrite-insert): rewrite

	* nethack-api.el (nhapi-doprev-message): call nh-message
	(nhapi-create-message-window): add newline
	(nhapi-display-menu): make sure there's a nh-message-buffer
	(nhapi-select-menu): likewise

2006-08-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack-compat.el (nh-read-key-sequence-vector): return the
	result of read-key-sequence-vector

	* nethack.el (nethack-status-style): new customizable variable
	(nethack-message-style): likewise
	(nethack-prompt-style): likewise
	(nh-filter): add "dummy" as a valid prompt indicator.

	* nethack-compat.el (nh-map-read-mode-map): new global variable
	(nh-map-read-self-insert): new function
	(nh-map-read-submit): likewise