@@ -1,3 +1,9 @@
+2020-05-27  Benjamin Yang  <be11ng@protonmail.com>
+
+	* nethack.el (nethack-kill-buffers): Use mapc instead of mapcar.
+	(nethack-el-version): Move def of the constant in front of the function
+	that calls it
+
 2020-05-26  Benjamin Yang  <be11ng@protonmail.com>
 
 	* mkpatch: Generate a diff for sys/unix/hints/linux-lisp.
